# PlantUML-Interactive-Editor

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  FEATURES.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: pre-commit.yml  python-app.yml  scorecard.yml
.kiro/skills/good-code-design/: SKILL.md
.kiro/skills/pre-commit-checklist/: SKILL.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: architecture.md  classes-explained.md  data_model.md  element_pattern.md  frontend_backend_contract.md  glossary.md  routes.md  setup.md
src/plantuml_gui/: __about__.py  __main__.py  add.py  app.py  arrow.py  classes.py  connector.py  ellipse.py  fork.py  group.py  if_statements.py  merge.py  note.py  participant.py  puml_encoder.py  render.py  sequence_classes.py  title.py  util.py  whilepoly.py
src/plantuml_gui/activity/: activity.py  add.py  arrow.py  classes.py  connector.py  ellipse.py  fork.py  group.py  if_statements.py  merge.py  note.py  routes.py  title.py  util.py  whilepoly.py
src/plantuml_gui/sequence/: activation.py  classes.py  group.py  message.py  note.py  participant.py  routes.py  util.py
src/plantuml_gui/shared/: parse_changelog.py  puml_encoder.py  render.py  routes.py
src/plantuml_gui/static/: ace.js  activity.js  mode-plantuml.js  script.js  sequence-activation.js  sequence-group.js  sequence-message.js  sequence-operations.js  sequence.js  styles.css  theme-dracula.js  theme-one_dark.js
src/plantuml_gui/static/css/: editor.css  layout.css  legacy.css  panels.css  tokens.css  toolbars.css
src/plantuml_gui/templates/: index.html
src/plantuml_gui/templates/partials/: activity_menus.html  sequence_menus.html
tests/: conftest.py  test_app.py  test_if_statements.py  test_participant.py
tests/activity/: test_activity.py  test_arrow.py  test_connector.py  test_ellipse.py  test_fork.py  test_group.py  test_if.py  test_if_statements.py  test_merge.py  test_note.py  test_repeat_while.py  test_switch.py  test_title.py  test_while.py
tests/e2e/: conftest.py  test_app_loads.py  test_js_logic.py  test_ribbon.py  test_sequence_activation.py  test_sequence_delete.py  test_sequence_message_interactions.py  test_sequence_participant.py
tests/js/: ScriptTests.js  SpecRunner.html
tests/sequence/: test_activation.py  test_message.py  test_note.py  test_participant.py  test_sequence_group.py  test_sequence_note.py
tests/shared/: test_render.py
