[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  { name = "Bertil Varenhorst", email = "bertil.varenhorst@ericsson.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "flask==3.0.3",
  "python-dotenv==1.0.1",
  "loguru==0.7.2",
  "pyquery==2.0.1",
]
description = ''
keywords = []
license = "MIT"
name = "plantuml-gui"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/Bertil Varenhorst/plantuml-gui#readme"
Issues = "https://github.com/Bertil Varenhorst/plantuml-gui/issues"
Source = "https://github.com/Bertil Varenhorst/plantuml-gui"

[tool.uv]
dev-dependencies = [
  "pytest==8.3.3",
  "ruff==0.7.3",
  "pre-commit==4.0.1",
  "mypy==1.13.0",
  "pytest-cov==6.0.0",
]

[tool.hatch.version]
path = "src/plantuml_gui/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/plantuml_gui"]

[tool.coverage.run]
branch = false
omit = ["src/plantuml_gui/__about__.py"]
parallel = true

[tool.coverage.paths]
plantuml_gui = ["src/plantuml_gui"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I", "N"]
